--- a/config/messages/app.properties
+++ b/config/messages/app.properties
@@ -8,5 +8,23 @@ user.email=Email
 user.roles=Roles
 user.active=Active
 user.registered=Registered
+
 meal.title=Meals
+meal.filter=Filter
+meal.from_date=From Date
+meal.to_date=To Date
+meal.from_time=From Time
+meal.to_time=To Time
+meal.date=Date
+meal.date_time=Date and time
+meal.description=Description
+meal.calories=Calories
+meal.create_meal=Create meal
+meal.edit_meal=Edit meal
+
+
 common.select=Select
+common.add=Add
+common.update=Update
+common.delete=Delete
+common.save=Save
