--- a/config/messages/app.properties
+++ b/config/messages/app.properties
@@ -20,6 +20,7 @@ user.active=Active
 user.registered=Registered
 user.password=Password
 user.caloriesPerDay=Daily calorie limit
+user.duplicatedEmail=User with such email already exists!
 
 meal.title=Meals
 meal.edit=Edit meal
